--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 	      成功！
 	    </div>
 	  </div>
-	  <div id="introPage" class="page">
+	  <!-- <div id="introPage" class="page">
 			<img class="intro-image" src="images/calbee.png" />
 			<div class="tnc-wrapper">	
 		    <div class="info">
@@ -100,10 +100,10 @@
 			  </div>
 			</div>
 		  <button id="toTerms" class="pageBtn next-btn" data-target="termsPage">NEXT <span class="right"></button>
-	  </div> 
+	  </div>  -->
 	  <div id="termsPage" class="page">
 	    <div class="msg-wrapper">
-		    以下の応募規約を読んで、同意の上、次へ進んでください。
+		    利用規約に同意ください。
 	    </div>
 	    <div class="tnc-wrapper">	
 	    <div class="terms" id="tnc">
@@ -112,7 +112,85 @@
 					<br>最後まで表示されると
 					<br>同意のチェックボックスを活性化
 	    	</div> -->
-	    	<div class="points">
+	    	<strong>キャンペーン概要</strong>
+	      <br>アンケートに回答した人の中から、抽選で1万名様にコンビニエンスストアで使える○○○引き換えクーポンをプレゼントいたします。
+	      <br><br>
+	      <strong>キャンペーン期間</strong>
+	      <br>2018年＊月＊日（火）0:00 ～ 2018年＊月＊日（日）23:59[日本時間]
+	      <br><br>
+	      <strong>賞品</strong>
+	      <br>&#9675;&#9675;&#24341;&#12365;&#25563;&#12360;&#12463;&#12540;&#12509;&#12531;&#12288;1&#19975;&#21517;&#27096;&#8232;&#20840;&#22269;&#12398;&#12525;&#12540;&#12477;&#12531;&#12289;&#12414;&#12383;&#12399;&#12511;&#12491;&#12473;&#12488;&#12483;&#12503;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;&#8232;
+	      <br>＜引き換え期限＞
+	      <br>2018年＊月＊日（火）0:00～2018年＊月＊日（月）23:59
+	      <br><br>
+	      <strong>応募方法</strong>
+	      <br>
+	      <div class="steps">
+	        <p><strong>STEP 1</strong>
+	        <br>メールアドレスまたはTwitterアカウントでログイン</p>
+	        <p><strong>STEP 2</strong>
+	        <br>アンケートに回答</p>
+	        <p><strong>STEP 3</strong>
+	        <br>応募</p>
+	        ※ご応募は、お一人様１回まで
+	        <br>※アクセス集中や環境などにより、返信に時間がかかる場合がございますのでご容赦ください。
+	      </div>
+	      <br><br>
+	      <strong>抽選・当選発表</strong>
+	      <br>抽選結果はご応募後、その場で確認できます。 当落に関するお問い合わせにはお答えできません。 ご当選された方には、当選画面にクーポンページのURLが表示されますのでタップして、クーポンを取得して下さい。
+	      <br><br>
+	      <strong>クーポン店頭引き換えについて</strong>
+	      <ul>
+	        <li>商品の引き換えは、クーポンページに記載される方法に従い、指定の期間内にお引き換えください。</li>
+	        <li>&#20840;&#22269;&#12398;&#12525;&#12540;&#12477;&#12531;&#12289;&#12414;&#12383;&#12399;&#12511;&#12491;&#12473;&#12488;&#12483;&#12503;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;&#8232;&#8251;&#12362;&#24341;&#12365;&#25563;&#12360;&#12399;&#12289;Loppi&#12364;&#35373;&#32622;&#12373;&#12428;&#12390;&#12356;&#12427;&#24215;&#38957;&#12395;&#38480;&#12426;&#12414;&#12377;&#12290;</li>
+	        <li>店舗によっては商品引き換えキャンペーンの対象商品を取り扱っていない場合があります。来店した店舗に対象商品がなかった場合は、取り扱いがある同一コンビニの別店舗で引き換えができます。お手数ですが、取り扱いがある同一コンビニの別店舗で引き換えを行ってください。</li>
+	        <li>詳細は当選者のみに送られるクーポンページをご覧ください。</li>
+	        <li>店頭でのお引き換えができる回数は引き換えクーポン１件あたり、一回限りです。</li>
+	        ＜引き換え手順＞
+	        <li>該当商品が店頭にあることを確認してください。</li>
+	        <li>クーポン画面のQRコードをLoppiで読み込み、クーポン券を発券してください。</li>
+	        <li>該当商品と一緒にクーポン券をレジへお持ちください。</li>
+	        <li>クーポンは発券より30分間のみ有効です。</li>
+	        <li>発券後30分経過で無効となりますが、再発券が可能です。</li>
+	        <li>発券されたクーポンは発行店でのみ有効です。</li>
+	      </ul>
+	      <br>
+	      <strong>注意事項</strong>
+	      <ul>
+	        <li>13歳未満（12歳以下）の方で本キャンペーンに参加をご希望の場合は、保護者の方がご応募ください。</li>
+	        <li>同一人物による複数アカウントでの連続応募など、キャンペーン運営上、平等性を欠くような妨害/不正行為と当社が判断した場合、事前予告なく当選を無効とさせていただく場合がございます。</li>
+	        <li>本キャンペーンへの応募のためのツイート内容(テキスト及び画像)は第三者の権利を侵害するもの、ポルノ、わいせつ、俗悪、冒とく、憎悪、偏見、人種差別、ものまね、不当な暴力を誘発、促進、または表現している内容は一切含まれていないものに限ります。第三者になんらかの損害を与えた場合は、参加者は自らの責任において対応し且つ参加者がこれを補償するものとします。また、ツイート内容や投稿の掲載により、第三者との間で紛争が生じた場合は、参加者は参加者の責任と費用により当該紛争を解決するものとします。</li>
+	        <li>投稿されたツイート内容（アカウント名含む）および画像は当社、当社関連会社、本キャンペーン事務局によって、広告、販売活動に関連する目的のため、TV、PC、モバイルを含むウェブサイト、及びその他広告物に掲載されることをご了承の上ご応募ください。その際、投稿された内容を一部加筆・修正させていただく場合もございますので、その点ご了承ください。</li>
+	        <li>＊＊＊＊社社員および関係者は参加できません。</li>
+	        <li>インターネット通信料・接続料はお客様の負担となります。</li>
+	        <li>本キャンペーンのご参加および当選の権利は、日本国内にお住まいの方に限らせていただきます。</li>
+	        <li>キャンペーンの応募状況および抽選結果に関するお問い合わせにはお答えしかねますので、あらかじめご了承ください。</li>
+	        <li>ご当選の権利はご当選者様ご本人のものとなり、ご家族・ご友人等への譲渡、転売、換金はできません。</li>
+	        <li>同一住所への当選賞品の発送は1点までとさせていただきます。</li>
+	        <li>発送先情報の登録がない場合や入力した情報に不備があった場合、当選の権利が無効となります。あらかじめご了承ください。</li>
+	        <li>賞品の発送は、日本国内に限らせていただきます。</li>
+	        <li>配送地域、天候、交通状況、お客様がご不在の場合など、お届けに遅れが生じる場合もございます。</li>
+	        <li>ご住所、転居先が不明等の理由により賞品を配達できない場合は、ご応募・ご当選の権利が無効となる場合がございます。</li>
+	        <li>賞品のネットオークション等での転売は、禁止いたします。</li>
+	        <li>賞品は予告なく変更となる場合がございますので、あらかじめご了承ください。</li>
+	        <li>本キャンペーンは、予告なく中止または内容が変更となる場合がございますので、あらかじめご了承ください。</li>
+	        <li>通信の際の接続トラブルにつきましては、責任を負いかねますので、ご了承ください。</li>
+	      </ul>
+	      <br>
+	      <strong>個人情報の取り扱い</strong>
+	      <ul>
+	        <li>ご記入いただきましたお客様の個人情報は、＊＊＊＊株式会社により管理させていただきます。</li>
+	        <li>本キャンペーンの抽選、賞品発送、個人を特定しない統計等マーケティング目的で使用いたします。</li>
+	        <li>お客様の個人情報を、お客様の同意なしに、業務委託先外の第三者に開示・提示することはありません。（法令などにより開示を求められた場合を除く）</li>
+	        <li>ご記入いただきましたお客様の個人情報は、セキュリティ確保の為、SSL/TLSによる暗号化通信をしています。</li>
+	        <li>その他、お客様の個人情報の取り扱いについては、「<a href="https://www.softbank.jp/corp/group/sbm/privacy/policy/" target="_blank">プライバシーポリシー</a>」をご参照ください。</li>
+	      </ul>
+	      <br>
+	      <strong>お問い合わせ</strong>
+	      <br>＊＊＊＊お客様センター
+	      <br>営業時間 9：00 ～ 17：00（土・日・祝祭日を除く）
+	      <br>お問い合わせフォームは<a href="https://ct11.my.softbank.jp/WB0/icv" target="_blank">こちら</a>
+	    	<!-- <div class="points">
 		      <strong class="points-title">概要</strong>
 		      <br>アンケートを完了した方から抽選で500名さまに「カルビー じゃがりこ サラダ」が当たります。
 		      <br><br>
@@ -155,35 +233,35 @@
 		        <li>本キャンペーンはやむをえない理由により予告なく内容の変更や中止となることがあります。</li>
 		        <li>登録内容に誤りがあった場合や、不正なご登録と判断された場合は、特典当選の権利は無効となりますのでご了承ください。</li>
 		      </ul>
-		    </div>
+		    </div> -->
 		  </div>
-		    <!-- <div class="agree-box miniCheckbox">
-		      <input type="checkbox" id="agreeCheck" disabled>
+		    <div class="agree-box miniCheckbox">
+		      <input type="checkbox" id="agreeCheck">
 		      <label for="agreeCheck">同意する</label>
 		      <span class="checkmark"></span>
-		    </div> -->
+		    </div>
 		</div>
-	    <button id="startSurvey" class="pageBtn next-btn" data-target="page2" disabled>同意する </button>
+	    <button id="startSurvey" class="pageBtn next-btn" data-target="page1" disabled>同意する </button>
 	  </div>
-	 <!--  <div id="page1" class="page">
+	  <div id="page1" class="page">
 	  	<div id="q1" class="pageQuestion">
 	  	</div>
 	  	<div class="pagination-wrapper">
 	      <div class="question-no">
-	        1/8
+	        1/6
 	    	</div>
 	      <button id="toQ2" class="pageBtn next-btn saveQuestion" data-question="1" data-target="page2">NEXT <span class="right"></button>
 	  	</div>
-	  </div> -->
+	  </div>
 	  <div id="page2" class="page">
 	  	<div id="q2" class="pageQuestion">
 	  	</div>
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ1" class="pageBtn back-btn" data-target="page1">BACK <span class="left"></button>
 	      <div class="question-no">
-	        1/7
+	        2/6
 	    	</div>
-	      <button id="toQ3" class="pageBtn next-btn saveQuestion" data-question="1" data-target="page3">NEXT <span class="right"></button>
+	      <button id="toQ3" class="pageBtn next-btn saveQuestion" data-question="2" data-target="page3">NEXT <span class="right"></button>
 	  	</div>
 	  </div>
 	  <div id="page3" class="page">
@@ -192,9 +270,9 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ2" class="pageBtn back-btn" data-target="page2">BACK <span class="left"></button>
 	      <div class="question-no">
-	        2/7
+	        3/6
 	    	</div>
-	      <button id="toQ4" class="pageBtn next-btn saveQuestion" data-question="2" data-target="page4">NEXT <span class="right"></button>
+	      <button id="toQ4" class="pageBtn next-btn saveQuestion" data-question="3" data-target="page4">NEXT <span class="right"></button>
 	  	</div>
 	  </div>
 	  <div id="page4" class="page">
@@ -203,9 +281,9 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ3" class="pageBtn back-btn" data-target="page3">BACK <span class="left"></button>
 	      <div class="question-no">
-	        3/7
+	        4/6
 	    	</div>
-	      <button id="toQ5" class="pageBtn next-btn saveQuestion" data-question="3" data-target="page5">NEXT <span class="right"></button>
+	      <button id="toQ5" class="pageBtn next-btn saveQuestion" data-question="4" data-target="page5">NEXT <span class="right"></button>
 	  	</div>
 	  </div>
 	  <div id="page5" class="page">
@@ -214,9 +292,9 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ4" class="pageBtn back-btn" data-target="page4">BACK <span class="left"></button>
 	      <div class="question-no">
-	        4/7
+	        5/6
 	    	</div>
-	      <button id="toQ6" class="pageBtn next-btn saveQuestion" data-question="4" data-target="page6">NEXT <span class="right"></button>
+	      <button id="toQ6" class="pageBtn next-btn saveQuestion" data-question="5" data-target="page6">NEXT <span class="right"></button>
 	  	</div>
 	  </div>
 	  <div id="page6" class="page">
@@ -225,31 +303,9 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ5" class="pageBtn back-btn" data-target="page5">BACK <span class="left"></button>
 	      <div class="question-no">
-	        5/7
+	        6/6
 	    	</div>
-		  	<button id="toQ7" class="pageBtn next-btn saveQuestion" data-question="5" data-target="page7">NEXT <span class="right"></button>
-	  	</div>
-	  </div>
-	  <div id="page7" class="page">
-	  	<div id="q7" class="pageQuestion">
-	  	</div>
-	  	<div class="pagination-wrapper">
-	  		<button id="toQ6" class="pageBtn back-btn" data-target="page6">BACK <span class="left"></button>
-	      <div class="question-no">
-	        6/7
-	    	</div>
-		  	<button id="toQ8" class="pageBtn next-btn saveQuestion" data-question="6" data-target="page8">NEXT <span class="right"></button>
-	  	</div>
-	  </div>
-	  <div id="page8" class="page">
-	  	<div id="q8" class="pageQuestion">
-	  	</div>
-	  	<div class="pagination-wrapper">
-	  		<button id="toQ7" class="pageBtn back-btn" data-target="page7">BACK <span class="left"></button>
-	      <div class="question-no">
-	        7/7
-	    	</div>
-		  	<button id="toResult" class="pageBtn next-btn saveQuestion" data-question="7" data-target="resultPage">NEXT <span class="right"></button>
+		  	<button id="toResult" class="pageBtn next-btn saveQuestion" data-question="6" data-target="resultPage">NEXT <span class="right"></button>
 	  	</div>
 	  </div>
 	  <div id="resultPage" class="page">
