--- a/public/index.html
+++ b/public/index.html
@@ -305,8 +305,23 @@
 	      <div class="question-no">
 	        6/6
 	    	</div>
-		  	<button id="toResult" class="pageBtn next-btn saveQuestion" data-question="6" data-target="resultPage">NEXT <span class="right"></button>
+	    	<button id="toApply" class="pageBtn next-btn saveQuestion" data-question="6" data-target="applyPage">NEXT <span class="right"></button>
 	  	</div>
+	  </div>
+	  <div id="applyPage" class="page">
+	  	<div class="msg-wrapper">
+	      アンケートにご協力頂きありがとうございました。
+		  </div>
+		  <button id="toCampaign" class="pageBtn next-btn" data-target="videoPage">キャンペーンに応募</button>
+			<button id="toQ5" class="pageBtn back-btn" data-target="page6">BACK <span class="left"></button>
+	  </div>
+	  <div id="videoPage" class="page">
+		  <div class="msg-wrapper">
+				動画視聴後に結果が表示されます。
+		  </div>
+		  <div class="vid-wrapper" id="vid">
+	    </div>
+		  <button id="toResult" class="pageBtn next-btn saveQuestion" data-target="resultPage">NEXT <span class="right"></button>
 	  </div>
 	  <div id="resultPage" class="page">
 		  <div id="resultTitle">
