winning page update
winning page update

--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@
 		  </div>
 		  <div id="resultDescription">
 		  </div>
-		  <img id="resultImage" src="images/calbee.png" />
+		  <img id="resultImage" src="images/header-main.png" />
 		  <div id="resultInstruction">
 		  </div>
 		  <a id="couponLink"><button><div id="couponLoader" class="loader in-btn"></div><span id="getCoupon"><!-- クーポンを受け取る --></span></button></a>
