terms text update

--- a/public/coupon.html
+++ b/public/coupon.html
@@ -8,9 +8,8 @@
 <body>    
   <header>
   	<div class="banner">
-      <img src="images/header-main.png" />
+      <img src="img/header-main.png" />
   	</div>
-	<h1>Example Coupon</h1>
   </header>
 </body>
 </html>
