--- a/public/index.html
+++ b/public/index.html
@@ -113,13 +113,13 @@
 					<br>同意のチェックボックスを活性化
 	    	</div> -->
 	    	<strong>キャンペーン概要</strong>
-	      <br>アンケートに回答した人の中から、抽選で1万名様にコンビニエンスストアで使える○○○引き換えクーポンをプレゼントいたします。
+	      <br>アンケートに回答した人の中から、抽選で&nbsp;&nbsp;&nbsp;&nbsp;名様にファミリーマートで使える○○○引き換えクーポンをプレゼントいたします。
 	      <br><br>
 	      <strong>キャンペーン期間</strong>
 	      <br>2018年＊月＊日（火）0:00 ～ 2018年＊月＊日（日）23:59[日本時間]
 	      <br><br>
 	      <strong>賞品</strong>
-	      <br>&#9675;&#9675;&#24341;&#12365;&#25563;&#12360;&#12463;&#12540;&#12509;&#12531;&#12288;1&#19975;&#21517;&#27096;&#8232;&#20840;&#22269;&#12398;&#12525;&#12540;&#12477;&#12531;&#12289;&#12414;&#12383;&#12399;&#12511;&#12491;&#12473;&#12488;&#12483;&#12503;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;&#8232;
+	      <br>&#9675;&#9675;&#24341;&#12365;&#25563;&#12360;&#12463;&#12540;&#12509;&#12531;&#12288;1&#19975;&#21517;&#27096;&#20840;&#22269;&#12398;&#12501;&#12449;&#12511;&#12522;&#12540;&#12510;&#12540;&#12488;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;
 	      <br>＜引き換え期限＞
 	      <br>2018年＊月＊日（火）0:00～2018年＊月＊日（月）23:59
 	      <br><br>
@@ -138,21 +138,15 @@
 	      <br><br>
 	      <strong>抽選・当選発表</strong>
 	      <br>抽選結果はご応募後、その場で確認できます。 当落に関するお問い合わせにはお答えできません。 ご当選された方には、当選画面にクーポンページのURLが表示されますのでタップして、クーポンを取得して下さい。
-	      <br><br>
+	      <br><br><br>
 	      <strong>クーポン店頭引き換えについて</strong>
 	      <ul>
-	        <li>商品の引き換えは、クーポンページに記載される方法に従い、指定の期間内にお引き換えください。</li>
-	        <li>&#20840;&#22269;&#12398;&#12525;&#12540;&#12477;&#12531;&#12289;&#12414;&#12383;&#12399;&#12511;&#12491;&#12473;&#12488;&#12483;&#12503;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;&#8232;&#8251;&#12362;&#24341;&#12365;&#25563;&#12360;&#12399;&#12289;Loppi&#12364;&#35373;&#32622;&#12373;&#12428;&#12390;&#12356;&#12427;&#24215;&#38957;&#12395;&#38480;&#12426;&#12414;&#12377;&#12290;</li>
-	        <li>店舗によっては商品引き換えキャンペーンの対象商品を取り扱っていない場合があります。来店した店舗に対象商品がなかった場合は、取り扱いがある同一コンビニの別店舗で引き換えができます。お手数ですが、取り扱いがある同一コンビニの別店舗で引き換えを行ってください。</li>
-	        <li>詳細は当選者のみに送られるクーポンページをご覧ください。</li>
-	        <li>店頭でのお引き換えができる回数は引き換えクーポン１件あたり、一回限りです。</li>
-	        ＜引き換え手順＞
-	        <li>該当商品が店頭にあることを確認してください。</li>
-	        <li>クーポン画面のQRコードをLoppiで読み込み、クーポン券を発券してください。</li>
-	        <li>該当商品と一緒にクーポン券をレジへお持ちください。</li>
-	        <li>クーポンは発券より30分間のみ有効です。</li>
-	        <li>発券後30分経過で無効となりますが、再発券が可能です。</li>
-	        <li>発券されたクーポンは発行店でのみ有効です。</li>
+				  <p>＜引き換え手順＞</p>
+				  <li>該当商品が店頭にあることを確認してください。</li>
+			    <li>該当商品と一緒にクーポン券をレジへお持ちください。</li>
+			    <li>クーポンは発券より30分間のみ有効です。</li>
+			    <li>発券後30分経過で無効となりますが、再発券が可能です。</li>
+			    <li>発券されたクーポンは発行店でのみ有効です。</li>
 	      </ul>
 	      <br>
 	      <strong>注意事項</strong>
@@ -183,13 +177,13 @@
 	        <li>本キャンペーンの抽選、賞品発送、個人を特定しない統計等マーケティング目的で使用いたします。</li>
 	        <li>お客様の個人情報を、お客様の同意なしに、業務委託先外の第三者に開示・提示することはありません。（法令などにより開示を求められた場合を除く）</li>
 	        <li>ご記入いただきましたお客様の個人情報は、セキュリティ確保の為、SSL/TLSによる暗号化通信をしています。</li>
-	        <li>その他、お客様の個人情報の取り扱いについては、「<a href="https://www.softbank.jp/corp/group/sbm/privacy/policy/" target="_blank">プライバシーポリシー</a>」をご参照ください。</li>
+	        <li>その他、お客様の個人情報の取り扱いについては、プライバシーポリシーをご参照ください。</li>
 	      </ul>
 	      <br>
 	      <strong>お問い合わせ</strong>
 	      <br>＊＊＊＊お客様センター
 	      <br>営業時間 9：00 ～ 17：00（土・日・祝祭日を除く）
-	      <br>お問い合わせフォームは<a href="https://ct11.my.softbank.jp/WB0/icv" target="_blank">こちら</a>
+	      <br>お問い合わせフォームはこちら
 	    	<!-- <div class="points">
 		      <strong class="points-title">概要</strong>
 		      <br>アンケートを完了した方から抽選で500名さまに「カルビー じゃがりこ サラダ」が当たります。
