terms page and registration page update

--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,18 @@
 	    </div>
 	  </div>
 	  <div id="regPage" class="page">
-	    <div class="msg-wrapper">
-	      キャンペーン告知
-	      <br><br><br>
-	      登録
+	    <div class="msg-wrapper" style="font-size: 14px;">
+				<span style="color: #0193DD; font-size: 16px;">アンケートに答えて商品をGet!
+				<br>抽選で3,000名様に商品をプレゼント</span>
+				<div style="max-width: 360px;margin: 15px auto;border: 1px solid #19AE48;border-radius: 4px">
+					<span style="color: #19AE48;">キャンペーン期間</span>：<br>2018年7月24日〜8月6日まで
+					<br><br><span style="color: #19AE48;">商品引換期間</span>：<br>2018年7月24日〜8月6日まで
+					<br><br><span style="color: #19AE48;">交換店舗</span>：<br>東京23区ないファミリーマート店舗
+		    </div>
+		    <div style="max-width: 360px; margin: auto; text-align: left;margin-bottom: 15px;">
+			    キャンペーンへの参加はお一人様一回限りとなります。
+		      <br>下記どちらかに登録してお進みください。
+		    </div>
 	    </div>
 	    <div id="regButtons">
 	      <button class="registerBtn modalOpener shadow-1" id="regEmail" data-target="regModal">Email</button>
@@ -116,12 +124,12 @@
 	      <br>アンケートに回答した人の中から、抽選で&nbsp;&nbsp;&nbsp;&nbsp;名様にファミリーマートで使える○○○引き換えクーポンをプレゼントいたします。
 	      <br><br>
 	      <strong>キャンペーン期間</strong>
-	      <br>2018年＊月＊日（火）0:00 ～ 2018年＊月＊日（日）23:59[日本時間]
+	      <br>2018年 7月 24日（火）0:00 ～ 2018年 8月 6日（日）23:59[日本時間]
 	      <br><br>
 	      <strong>賞品</strong>
 	      <br>&#9675;&#9675;&#24341;&#12365;&#25563;&#12360;&#12463;&#12540;&#12509;&#12531;&#12288;1&#19975;&#21517;&#27096;&#20840;&#22269;&#12398;&#12501;&#12449;&#12511;&#12522;&#12540;&#12510;&#12540;&#12488;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;
 	      <br>＜引き換え期限＞
-	      <br>2018年＊月＊日（火）0:00～2018年＊月＊日（月）23:59
+	      <br>2018年 7月 24日（火）0:00～2018年 8月 6日（月）23:59
 	      <br><br>
 	      <strong>応募方法</strong>
 	      <br>
