winner and loser page update

--- a/public/index.html
+++ b/public/index.html
@@ -50,15 +50,15 @@
 	    </div>
 	  </div>
 	  <div id="regPage" class="page">
-	    <div class="msg-wrapper" style="font-size: 14px;">
+	    <div class="msg-wrapper" id="regMsg">
 				<span style="color: #0193DD; font-size: 16px;">アンケートに答えて商品をGet!
 				<br>抽選で3,000名様に商品をプレゼント</span>
-				<div style="max-width: 360px;margin: 15px auto;border: 1px solid #19AE48;border-radius: 4px">
-					<span style="color: #19AE48;">キャンペーン期間</span>：<br>2018年7月24日〜8月6日まで
-					<br><br><span style="color: #19AE48;">商品引換期間</span>：<br>2018年7月24日〜8月6日まで
-					<br><br><span style="color: #19AE48;">交換店舗</span>：<br>東京23区ないファミリーマート店舗
+				<div class="campaignInfo">
+					<span style="color: #19AE48;">キャンペーン期間：</span><br>2018年7月24日〜8月6日まで
+					<br><br><span style="color: #19AE48;">商品引換期間：</span><br>2018年7月24日〜8月6日まで
+					<br><br><span style="color: #19AE48;">交換店舗：</span><br>東京23区ないファミリーマート店舗
 		    </div>
-		    <div style="max-width: 360px; margin: auto; text-align: left;margin-bottom: 15px;">
+		    <div class="regInstruction">
 			    キャンペーンへの参加はお一人様一回限りとなります。
 		      <br>下記どちらかに登録してお進みください。
 		    </div>
@@ -339,6 +339,25 @@
 		  <div id="resultInstruction">
 		  </div>
 		  <a id="couponLink"><button><div id="couponLoader" class="loader in-btn"></div><span id="getCoupon"><!-- クーポンを受け取る --></span></button></a>
+		  <div style="padding: 0px 15px;">
+			  <div id="couponInfo">
+			  	<span style="color: #19AE48;">有効期限：</span>
+			  	<br>2018年8月6日まで
+					<br><span style="color: #19AE48;">交換場所：</span>
+					<br>東京23区内ファミリーマート店舗				 
+					<br><br><span style="color: #19AE48;">商品交換方法:</span>
+					<div class="bullets-wrapper">
+						<ol>
+							<li>Famiポート トップメニュー（トップ画面）で「クーポン券」にタッチ</li>
+							<li>シリアル番号をお持ちの方はこちら」ボタンをタッチ</li>
+							<li>クーポン発券用シリアル番号を入力</li>
+							<li>サービス内容を確認</li>
+							<li>クーポン券を発券</li>
+							<li>クーポンをレジまでお持ち下さい。</li>
+						</ol>
+					</div>
+			  </div>
+			</div>
 	  </div>
   </div>
 </body>
