Remove Q6 and new winning logic

--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
 	  	</div>
 	  	<div class="pagination-wrapper">
 	      <div class="question-no">
-	        1/6
+	        1/5
 	    	</div>
 	      <button id="toQ2" class="pageBtn next-btn saveQuestion" data-question="1" data-target="page2">NEXT <span class="right"></span></button>
 	  	</div>
@@ -261,7 +261,7 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ1" class="pageBtn back-btn" data-target="page1">BACK <span class="left"></span></button>
 	      <div class="question-no">
-	        2/6
+	        2/5
 	    	</div>
 	      <button id="toQ3" class="pageBtn next-btn saveQuestion" data-question="2" data-target="page3">NEXT <span class="right"></span></button>
 	  	</div>
@@ -272,7 +272,7 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ2" class="pageBtn back-btn" data-target="page2">BACK <span class="left"></span></button>
 	      <div class="question-no">
-	        3/6
+	        3/5
 	    	</div>
 	      <button id="toQ4" class="pageBtn next-btn saveQuestion" data-question="3" data-target="page4">NEXT <span class="right"></button>
 	  	</div>
@@ -283,7 +283,7 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ3" class="pageBtn back-btn" data-target="page3">BACK <span class="left"></span></button>
 	      <div class="question-no">
-	        4/6
+	        4/5
 	    	</div>
 	      <button id="toQ5" class="pageBtn next-btn saveQuestion" data-question="4" data-target="page5">NEXT <span class="right"></span></button>
 	  	</div>
@@ -294,9 +294,9 @@
 	  	<div class="pagination-wrapper">
 	  		<button id="toQ4" class="pageBtn back-btn" data-target="page4">BACK <span class="left"></span></button>
 	      <div class="question-no">
-	        5/6
+	        5/5
 	    	</div>
-	      <button id="toQ6" class="pageBtn next-btn saveQuestion" data-question="5" data-target="page6">NEXT <span class="right"></span></button>
+	      <button id="toApply" class="pageBtn next-btn saveQuestion" data-question="5" data-target="applyPage">NEXT <span class="right"></span></button>
 	  	</div>
 	  </div>
 	  <div id="page6" class="page">
