registration page message text change

--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
 	  </div>
 	  <div id="regPage" class="page">
 	  	<div class="msg-wrapper" id="regMsg" style="margin-bottom: 15px;">
-	  		らかを登録して登録して
+	  		下記どちらかを登録して
 				<br>アンケートにお進みください。
 	  	</div>
 	    <div id="regButtons">
