--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,11 @@
 	  <div id="termsPage1" class="page">
 	  	<div class="msg-wrapper" id="terms1Msg">
 		  	<span style="color: #0193DD; font-size: 16px;">アンケートに答えて商品をGet!
-				<br>抽選で3,000名様に商品をプレゼント</span>
+				<br>抽選で17,000名様に商品をプレゼント</span>
 				<div class="campaignInfo">
-					<span style="color: #19AE48;">キャンペーン期間：</span><br>2018年7月24日〜8月6日まで
-					<br><br><span style="color: #19AE48;">商品引換期間：</span><br>2018年7月24日〜8月6日まで
-					<br><br><span style="color: #19AE48;">交換店舗：</span><br>東京23区ないファミリーマート店舗
+					<span style="color: #19AE48;">キャンペーン期間：</span><br>2018年8月27日〜9月9日まで
+					<br><br><span style="color: #19AE48;">商品引換期間：</span><br>2018年8月27日〜9月10日まで
+					<br><br><span style="color: #19AE48;">交換店舗：</span><br>全国ファミリーマート店舗
 		    </div>
 		    <div class="regInstruction">
 			    キャンペーンへの参加はお一人様一回限りとなります。
@@ -75,127 +75,39 @@
 	    </div>
 	    <div class="tnc-wrapper">	
 	    <div class="terms" id="tnc">
-	    	<!-- <div class="instruction">
-					スクロールで
-					<br>最後まで表示されると
-					<br>同意のチェックボックスを活性化
-	    	</div> -->
-	    	<strong>キャンペーン概要</strong>
-	      <br>アンケートに回答した人の中から、抽選で&nbsp;&nbsp;&nbsp;&nbsp;名様にファミリーマートで使える○○○引き換えクーポンをプレゼントいたします。
-	      <br><br>
-	      <strong>キャンペーン期間</strong>
-	      <br>2018年 7月 24日（火）0:00 ～ 2018年 8月 6日（日）23:59[日本時間]
-	      <br><br>
-	      <strong>賞品</strong>
-	      <br>&#9675;&#9675;&#24341;&#12365;&#25563;&#12360;&#12463;&#12540;&#12509;&#12531;&#12288;1&#19975;&#21517;&#27096;&#20840;&#22269;&#12398;&#12501;&#12449;&#12511;&#12522;&#12540;&#12510;&#12540;&#12488;&#12391;&#24341;&#12365;&#25563;&#12360;&#21487;&#33021;&#12391;&#12377;&#12290;
-	      <br>＜引き換え期限＞
-	      <br>2018年 7月 24日（火）0:00～2018年 8月 6日（月）23:59
-	      <br><br>
-	      <strong>応募方法</strong>
-	      <br>
-	      <div class="steps">
-	        <p><strong>STEP 1</strong>
-	        <br>メールアドレスまたはTwitterアカウントでログイン</p>
-	        <p><strong>STEP 2</strong>
-	        <br>アンケートに回答</p>
-	        <p><strong>STEP 3</strong>
-	        <br>応募</p>
-	        ※ご応募は、お一人様１回まで
-	        <br>※アクセス集中や環境などにより、返信に時間がかかる場合がございますのでご容赦ください。
-	      </div>
-	      <br><br>
-	      <strong>抽選・当選発表</strong>
-	      <br>抽選結果はご応募後、その場で確認できます。 当落に関するお問い合わせにはお答えできません。 ご当選された方には、当選画面にクーポンページのURLが表示されますのでタップして、クーポンを取得して下さい。
-	      <br><br><br>
-	      <strong>クーポン店頭引き換えについて</strong>
-	      <ul>
-				  <p>＜引き換え手順＞</p>
-				  <li>該当商品が店頭にあることを確認してください。</li>
-			    <li>該当商品と一緒にクーポン券をレジへお持ちください。</li>
-			    <li>クーポンは発券より30分間のみ有効です。</li>
-			    <li>発券後30分経過で無効となりますが、再発券が可能です。</li>
-			    <li>発券されたクーポンは発行店でのみ有効です。</li>
-	      </ul>
-	      <br>
-	      <strong>注意事項</strong>
-	      <ul>
-	        <li>13歳未満（12歳以下）の方で本キャンペーンに参加をご希望の場合は、保護者の方がご応募ください。</li>
-	        <li>同一人物による複数アカウントでの連続応募など、キャンペーン運営上、平等性を欠くような妨害/不正行為と当社が判断した場合、事前予告なく当選を無効とさせていただく場合がございます。</li>
-	        <li>本キャンペーンへの応募のためのツイート内容(テキスト及び画像)は第三者の権利を侵害するもの、ポルノ、わいせつ、俗悪、冒とく、憎悪、偏見、人種差別、ものまね、不当な暴力を誘発、促進、または表現している内容は一切含まれていないものに限ります。第三者になんらかの損害を与えた場合は、参加者は自らの責任において対応し且つ参加者がこれを補償するものとします。また、ツイート内容や投稿の掲載により、第三者との間で紛争が生じた場合は、参加者は参加者の責任と費用により当該紛争を解決するものとします。</li>
-	        <li>投稿されたツイート内容（アカウント名含む）および画像は当社、当社関連会社、本キャンペーン事務局によって、広告、販売活動に関連する目的のため、TV、PC、モバイルを含むウェブサイト、及びその他広告物に掲載されることをご了承の上ご応募ください。その際、投稿された内容を一部加筆・修正させていただく場合もございますので、その点ご了承ください。</li>
-	        <li>＊＊＊＊社社員および関係者は参加できません。</li>
-	        <li>インターネット通信料・接続料はお客様の負担となります。</li>
-	        <li>本キャンペーンのご参加および当選の権利は、日本国内にお住まいの方に限らせていただきます。</li>
-	        <li>キャンペーンの応募状況および抽選結果に関するお問い合わせにはお答えしかねますので、あらかじめご了承ください。</li>
-	        <li>ご当選の権利はご当選者様ご本人のものとなり、ご家族・ご友人等への譲渡、転売、換金はできません。</li>
-	        <li>同一住所への当選賞品の発送は1点までとさせていただきます。</li>
-	        <li>発送先情報の登録がない場合や入力した情報に不備があった場合、当選の権利が無効となります。あらかじめご了承ください。</li>
-	        <li>賞品の発送は、日本国内に限らせていただきます。</li>
-	        <li>配送地域、天候、交通状況、お客様がご不在の場合など、お届けに遅れが生じる場合もございます。</li>
-	        <li>ご住所、転居先が不明等の理由により賞品を配達できない場合は、ご応募・ご当選の権利が無効となる場合がございます。</li>
-	        <li>賞品のネットオークション等での転売は、禁止いたします。</li>
-	        <li>賞品は予告なく変更となる場合がございますので、あらかじめご了承ください。</li>
-	        <li>本キャンペーンは、予告なく中止または内容が変更となる場合がございますので、あらかじめご了承ください。</li>
-	        <li>通信の際の接続トラブルにつきましては、責任を負いかねますので、ご了承ください。</li>
-	      </ul>
-	      <br>
-	      <strong>個人情報の取り扱い</strong>
-	      <ul>
-	        <li>ご記入いただきましたお客様の個人情報は、＊＊＊＊株式会社により管理させていただきます。</li>
-	        <li>本キャンペーンの抽選、賞品発送、個人を特定しない統計等マーケティング目的で使用いたします。</li>
-	        <li>お客様の個人情報を、お客様の同意なしに、業務委託先外の第三者に開示・提示することはありません。（法令などにより開示を求められた場合を除く）</li>
-	        <li>ご記入いただきましたお客様の個人情報は、セキュリティ確保の為、SSL/TLSによる暗号化通信をしています。</li>
-	        <li>その他、お客様の個人情報の取り扱いについては、プライバシーポリシーをご参照ください。</li>
-	      </ul>
-	      <br>
-	      <strong>お問い合わせ</strong>
-	      <br>＊＊＊＊お客様センター
-	      <br>営業時間 9：00 ～ 17：00（土・日・祝祭日を除く）
-	      <br>お問い合わせフォームはこちら
-	    	<!-- <div class="points">
-		      <strong class="points-title">概要</strong>
-		      <br>アンケートを完了した方から抽選で500名さまに「カルビー じゃがりこ サラダ」が当たります。
-		      <br><br>
-		      <strong class="points-title">応募期間</strong>
-		      <br>2018年 月 日から2018年 月 日まで
-		      <br><br>
-		      <strong class="points-title">商品引き換え期間</strong>
-		      <br>2018年6月23日(日）まで
-		      <br><br>
-		      <strong class="points-title">賞品</strong>
-		      <br>カルビー じゃがりこ サラダ　1個
-		      <br><br>
-		      <strong class="points-title">受け取り場所</strong>
-		      <br>セブン-イレブンでお受取りいただけます。
-		      <br><br>
-		      <strong class="points-title">注意事項</strong>
-		      <ul>
-		        <li>お引き換えには、電子クーポン画面を表示できるスマートフォン・携帯電話が必要です。</li>
-		        <li>電子クーポン画面の表示にはインターネット接続が必要です。</li>
-		        <li>ご利用に関するパケット通信料はお客様のご負担となります。</li>
-		        <li>スマートフォンの一部の機種・ブラウザでは電子クーポン表示ができない場合がございます。</li>
-		        <li>パソコン、タブレット、インターネット機能がない端末(プリペイド携帯など)では電子クーポン表示ができません。</li>
-		        <li>電子クーポンを印刷したものを店頭にお持ちいただいても、引き換えできません。</li>
-		        <li>他の割引券・引換券などとは併用できません。</li>
-		        <li>期限が過ぎた電子クーポンは無効です。</li>
-		        <li>引換期間中、お一人様1回限りご利用が可能です。</li>
-		        <li>店舗により、商品のお取り扱いがない、品切れ、掲載商品とパッケージや容量が異なる場合がございますので、予めご了承ください。</li>
-		        <li>商品は発送されません。</li>
-		        <li>商品は予告なく終了や変更になる可能性がございます。</li>
-		        <li>店舗に在庫が無い／お近くに店舗が無い等の理由により、お引き換えができない場合でも代替品の送付はいたしません。</li>
-		        <li>キャンペーンの対象となる商品等の性質（利用に年齢制限があるもの等）によっては、ご応募をお断りする場合がございます。</li>
-		        <li>当選連絡の再送いたしかねますので、ご注意ください。</li>
-		        <li>詳しい引き換え手順は当選後のご確認ください。</li>
-		        <li>選考方法を問わず、応募結果等について、個別のお問い合わせにはお答えいたしかねます。</li>
-		        <li>商品の責任は商品提供企業にございます。商品に関するお問い合わせは、商品提供企業に直接お願いいたします。この場合でも商品の交換ができない場合もございますので、あらかじめご了承ください。</li>
-		        <li>商品のご利用に際してお客様に生じた損害に関して一切の責任を負いませんのでご了承ください。</li>
-		        <li>ご応募は、日本国内に在住の方に限らせていただきます。</li>
-		        <li>応募期間内であっても、応募後の内容修正などはできませんので、入力の際は間違いのないようにお願いいたします。</li>
-		        <li>当選権利の換金・他人への譲渡はできません。</li>
-		        <li>本キャンペーンはやむをえない理由により予告なく内容の変更や中止となることがあります。</li>
-		        <li>登録内容に誤りがあった場合や、不正なご登録と判断された場合は、特典当選の権利は無効となりますのでご了承ください。</li>
-		      </ul>
-		    </div> -->
+	    	<strong>アンケート参加同意書</strong>
+	    	<div class="paragraph">本アンケートは、株式会社コンテンツブレイン(以下「コンテンツブレイン」といいます)が実施するキャンペーン用アンケートです。本アンケートに関して、コンテンツブレインが取得する情報は、アンケートに関する個人情報等取扱い規約(以下「本規約」といいます)に従って取扱われます。</div> 
+			<div class="list">
+				<ol>
+					<li>本規約には、コンテンツブレイン実施のアンケートの回答情報を集計した情報、および意見等自由記載が行える場合にはその文章を、アンケート依頼元に対して提供することに関する同意が含まれています。なお、依頼元に提供する情報の中に連絡先情報(メールアドレスもしくはTwitter ID)は含まれません。</li>
+					<li>本アンケートでは、お客様を識別するために「メールアドレス」もしくは「TwitterID」 を利用しますが、アンケート期間終了後には自動的に消去されます。</li>
+					<li>本アンケートにおいて、お客様を識別する情報を保管する期間は 2018年08月28日　から　2018年09月11日　です。</li>
+					<li>本規約には、アンケート期間中のオプトアウト方法のご案内も含まれています。同意される場合のみ、本アンケートにご回答ください。</li>
+					<li>本アンケートは市場調査を目的としており、回答情報によるご案内の送付等は行いません。</li>
+					<li> アンケートの回答はおひとり様1回のみです。おひとりで複数回々答した場合、その他、不正な行為が行われた場合、進呈クーポンは無効となる場合があります。</li>
+					<li>本アンケートの情報収集について、コンテンツブレインは株式会社Mobile360に委託し収集するものとします。</li>
+				</ol>
+			</div>
+	    	<div class="paragraph">アンケートに関する個人情報等取扱い規約</div>
+	    	<div class="list">
+	    		<ol>
+	    			<li>コンテンツブレインは、次項に定めるお客さまの情報(以下「アンケート情報等」といいます)を以下の目的で利用等します。</li>
+	    			<li>商品・サービス等に関する調査の実施・分析等</li>
+	    			<li>商品・サービス等の案内</li>
+	    			<li>アンケート対象者の選定</li>
+	    			<li>クーポンの付与</li>
+	    			<li>アンケート情報等とは、以下の情報をいいます。
+						<div class="j-list-wrapper">
+							<div class="j-list">
+								<div class="j-point">(ア)</div><div class="j-text">お客さまによるコンテンツブレイン実施のアンケートへの回答内容</div>
+							</div>
+							<div class="j-list">
+								<div class="j-point">(ア)</div><div class="j-text">コンテンツブレインがお客さまを識別するための「メールアドレス」もしくは、<br>「Twitter ID」 </div>
+							</div>
+						</div>
+	    			</li>
+	    		</ol>
+	    	</div>
 		  </div>
 		    <div class="agree-box miniCheckbox">
 		      <input type="checkbox" id="agreeCheck">
